# shuxueshuo

./: .gitignore  README.md
server/: .env.example  .gitignore  README.md  nginx-api-snippet.conf  pyproject.toml
server/shuxueshuo_server/: __init__.py  main.py  wechat_jssdk.py
server/shuxueshuo_server/solver/: __init__.py  contracts.py  deepseek_functional_batch.py  engine.py  fixtures.py  math_ops.py  output_type_policy.py  problem_models.py  question_goals.py  result_models.py  solve_problem.py  state_semantics.py  student_display.py  utils.py
server/tests/solver/: _functional_opt_in_support.py  test_answer_goal_verifier.py  test_canonical_draft_finalizer.py  test_cli.py  test_condition_roles.py  test_context_builder.py  test_context_declarations.py  test_context_inventory.py  test_context_path.py  test_controlled_llm_planner_phase_c.py  test_deepseek_functional_batch.py  test_deepseek_functional_opt_in_support.py  test_deepseek_functional_planner_heping.py  test_deepseek_functional_planner_heping_ermo.py  test_deepseek_functional_planner_hexi.py  test_deepseek_functional_planner_nankai.py  test_deepseek_functional_planner_xiqing.py  test_deepseek_strategy_planner_heping.py  test_deepseek_strategy_planner_heping_ermo.py  test_deepseek_strategy_planner_hexi.py  test_deepseek_strategy_planner_nankai.py  test_deepseek_strategy_planner_xiqing.py  test_explanation_builder_text_heping_yimo.py  test_family_spec.py  test_fixture_schema.py  test_functional_few_shots.py  test_functional_input_closure.py  test_functional_plan_primitives.py  test_invocation_executor.py  (+32 more)
(+739 files in other folders)
