[project]
name = "shuxueshuo-server"
version = "0.1.0"
description = "WeChat JS-SDK config API for 数学说"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shuxueshuo_server*"]
